# the-Cooper-Mapper

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  package.xml
L_SLAM/: README.md
L_SLAM/rviz_cfg/: localization.rviz
L_SLAM/scripts/: map_convert_for_localization.sh
L_SLAM/src/io_module/: trajectory.h
L_SLAM/src/kf_fusion/: imuReceiver.cpp  transPointCLoud.cpp  transPointCLoud.h  utmProjection.cpp  utmProjection.h
L_SLAM/src/kf_fusion/kf/: ukf_pose_estimator.hpp
L_SLAM/src/map_evaluation/: CMakeLists.txt
L_SLAM/src/map_evaluation/node/: evaluation_node.cpp
L_SLAM/src/odometry/: CMakeLists.txt  LaserMappingLocal.cpp  LaserMatcher.h  MultiScanRegistration.h  OrganisedScanRegistration.h
L_SLAM/src/odometry/node/: organised_scan_registration_node.cpp
L_SLAM/src/odometry/nodelet/: LaserMappingLocalNodelet.cpp  LaserOdometryNodelet.cpp
L_SLAM/src/pose_graph/: graph.cpp  graph.h  keyframe.cpp  keyframe_updater.hpp  solver_g2o.cpp
L_SLAM/src/util/: Vector3.h  pcl_util.h
MAIN_LAUNCH/: ssh_launch_no_bag.launch  ssh_network_launch.launch
control/src/: wander.cpp
driver/: CmakeLists.txt  package.xml
driver/launch/: mapping_base.launch
driver/src/: tf_2D_broadcaster.cpp
include/smartbot/: random_controller.h
jetsonTX1GPIO/: CMakeLists.txt  encoder.cpp  encoder.h  exampleGPIOApp  exampleGPIOApp.cpp  jetsonGPIO.h  package.xml
jetsonTX1GPIO/deprecated/: build.sh
jetsonTX1GPIO/include/: encoder.h  jetsonGPIO.h
jetsonTX1GPIO/launch/: two_encoder.launch
jetsonTX1GPIO/src/: encoder.cpp  encoder.h  main.cpp
localization/src/: 2D_Space.py  intuition_in_1D.py
localization_toturial/src/: 2D_Space.py  intuition_in_1D.py
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/src/: mylaserdata.bag  tf_broadcaster.cpp
smartbot/: package.xml
smartbot/L_SLAM/: CMakeLists.txt  README.md  nodelets.xml
smartbot/L_SLAM/launch/nodelet/: lidar_localization_nodelet.launch
smartbot/L_SLAM/rviz_cfg/: graph.rviz  mapping.rviz
smartbot/L_SLAM/scripts/: lidar_rot_publisher.py
smartbot/L_SLAM/src/frame_match/: ScanMatch.cpp
smartbot/L_SLAM/src/io_module/: CMakeLists.txt  FrameUpdater.hpp  LocalFeatureMap.h
smartbot/L_SLAM/src/kf_fusion/: fpdReceiver.cpp  imu_queue.h  loadExtrinsic.hpp  transPointCLoud.h  utmProjection.cpp
smartbot/L_SLAM/src/kf_fusion/script/: extrinsics_broadcaster.py
smartbot/L_SLAM/src/map_evaluation/: Evaluation.cpp  Evaluation.h
smartbot/L_SLAM/src/odometry/: LaserLocalization.cpp  LaserLocalization.h  LaserOdometry.cpp  LaserOdometry.h  MultiScanRegistration.cpp  OrganizedScanRegistration.cpp  ScanRegistration.h  TransformMaintenance.h  point_types.h
smartbot/L_SLAM/src/odometry/node/: laser_localization_node.cpp  laser_mapping_node.cpp  laser_odometry_node.cpp
smartbot/L_SLAM/src/odometry/nodelet/: MultiScanRegistrationNodelet.cpp
smartbot/L_SLAM/src/pose_graph/: loop_detector.hpp
smartbot/L_SLAM/src/pose_graph/node/: graph_node.cpp
smartbot/L_SLAM/src/scan_to_scan_match/: ScanMatch.h
smartbot/L_SLAM/src/util/: Angle.h  DynamicFeatureMap.h  FeatureMap.h  nanoflann.hpp  nanoflann_pcl.h  pcl_util.h  ros_utils.h  transform_utils.h  voxel_grid_partition.hpp
smartbot/control/: CMakeLists.txt
smartbot/control/src/: teleop_key_node.cpp
smartbot/src/: random_controller.cpp  teleop_key_node.cpp
smartbot/src/L_SLAM/: CMakeLists.txt  package.xml
smartbot/src/L_SLAM/launch/node/: fpd.launch  lidar_localization.launch  lidar_mapping.launch  lidar_mapping_local.launch
smartbot/src/L_SLAM/rviz_cfg/: odometry.rviz
smartbot/src/L_SLAM/scripts/: lidar_init_publisher.py
smartbot/src/L_SLAM/src/frame_match/: CMakeLists.txt  ScanMatch.h
smartbot/src/L_SLAM/src/io_module/: CloudSaver.h  DataFrame.h  LocalFeatureMap.h  feature_extracter.cpp  indexConvert.cpp  trajectory.h
smartbot/src/L_SLAM/src/kf_fusion/: CMakeLists.txt  fpd_queue.h  imuReceiver.cpp  loadExtrinsic.hpp  transPointCLoud.cpp  utmProjection.h
smartbot/src/L_SLAM/src/kf_fusion/kf/: pose_system.hpp  unscented_kalman_filter.hpp
smartbot/src/L_SLAM/src/map_evaluation/: Evaluation.h
smartbot/src/L_SLAM/src/odometry/: LaserLocalization.cpp  LaserMapping.cpp  LaserMapping.h  LaserMappingLocal.h  LaserMatcher.cpp  LaserMatcher.h  LaserOdometry.cpp  LaserOdometry.h  ScanRegistration.cpp  TransformMaintenance.h  lidar_type.h
smartbot/src/L_SLAM/src/odometry/node/: laser_mappinglocal_node.cpp  multi_scan_registration_node.cpp  transform_maintenance_node.cpp
smartbot/src/L_SLAM/src/odometry/nodelet/: LaserLocalizationNodelet.cpp  LaserMappingNodelet.cpp  OrganisedScanRegistrationNodelet.cpp  TransformMaintenanceNodelet.cpp
smartbot/src/L_SLAM/src/pose_graph/: CMakeLists.txt  graph.h  information_estimator.hpp  keyframe.h  keyframe_updater.hpp  solver_g2o.h
smartbot/src/L_SLAM/src/pose_graph/nodelet/: GraphNodelet.cpp
smartbot/src/L_SLAM/src/util/: CircularBuffer.h  Twist.h  feature_utils.h  io_utils.h  math_utils.h
src/: range_reporter.cpp
